--- a/templates/intro.html
+++ b/templates/intro.html
@@ -50,7 +50,7 @@ div {
     <input type="number" name="gre_score" placeholder="Enter GRE Score" max="350">
 
     <label>TOEFL Score(Out of 120)</label>
-    <input type="number" name="toefl_score" placeholder="Enter TOEFL Score" max="120">
+    <input type="number" name="toefl" placeholder="Enter TOEFL Score" max="120">
 
     <label for="rating">University Rating</label>
     <select id="rating" name="rating">
