--- a/templates/intro.html
+++ b/templates/intro.html
@@ -38,7 +38,7 @@ div {
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Admission Score Prediction</title>
 </head>
 <body>
 
